# windeployqt

./: CMakeLists.txt  main.cpp  read_pe_linux.cpp  utils.cpp  utils.h  windeployqt.pro
